--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,8 +1,8 @@
 # =============================================================================
-# GitHub Actions - Android APK Build (v6.0 极简版)
+# GitHub Actions - Android APK Build (v7.0 推倒重来版)
 # =============================================================================
-# 修复：JDK17缺JAXB、旧版tools不兼容、符号链接冲突、日志未生成
-# 步骤数：12步 | 行数：<180行
+# 逻辑：环境探测 → 版本固化 → 预验证 → 构建 → 上传日志
+# 设计原则：先摸清环境再写代码，所有版本硬编码，预验证通过才构建
 # =============================================================================
 name: Build Android APK
 
@@ -13,96 +13,167 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+env:
+  # ===== 版本硬编码（杜绝自动更新）=====
+  PYTHON_VERSION: "3.10"
+  JDK_VERSION: "11"
+  ANDROID_API: "33"
+  BUILD_TOOLS: "33.0.2"
+  NDK_VERSION: "25.2.9519653"
+  ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
+
 jobs:
   build:
-    runs-on: ubuntu-latest
-    env:
-      ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
-      ANDROID_HOME: /usr/local/lib/android/sdk
-      ANDROID_NDK_VERSION: 25.2.9519653
+    runs-on: ubuntu-22.04
+    # 固化Ubuntu版本为22.04，避免24.04的兼容性问题
 
     steps:
-      # 步骤1：拉取代码
-      - name: Checkout
+      # ===========================================
+      # 步骤1：环境探测（了解GitHub Actions当前环境）
+      # ===========================================
+      - name: "1️⃣ 环境探测"
+        run: |
+          echo "===== 系统信息 ====="
+          lsb_release -a || cat /etc/os-release
+          echo ""
+          echo "===== 预装Java版本 ====="
+          java -version 2>&1 || echo "Java未预装"
+          echo ""
+          echo "===== 预装Python版本 ====="
+          python3 --version || echo "Python3未预装"
+          echo ""
+          echo "===== 预装SDK路径 ====="
+          echo "ANDROID_SDK_ROOT: $ANDROID_SDK_ROOT"
+          ls -la $ANDROID_SDK_ROOT 2>/dev/null || echo "SDK目录不存在"
+          echo ""
+          echo "===== 预装build-tools ====="
+          ls $ANDROID_SDK_ROOT/build-tools/ 2>/dev/null || echo "无预装build-tools"
+          echo ""
+          echo "===== 环境探测完成 ====="
+
+      # ===========================================
+      # 步骤2：版本固化（强制使用指定版本）
+      # ===========================================
+      - name: "2️⃣ 拉取代码"
         uses: actions/checkout@v4
 
-      # 步骤2：设置Python 3.10
-      - name: Setup Python
+      - name: "2️⃣ 固化Python版本"
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: ${{ env.PYTHON_VERSION }}
 
-      # 步骤3：设置JDK 11（修复JAXB缺失问题）
-      - name: Setup JDK 11
+      - name: "2️⃣ 固化JDK版本（JDK11解决JAXB问题）"
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '11'
+          java-version: ${{ env.JDK_VERSION }}
 
-      # 步骤4：验证Java版本
-      - name: Verify Java
-        run: java -version
-
-      # 步骤5：设置Android SDK
-      - name: Setup Android SDK
+      - name: "2️⃣ 固化Android SDK"
         uses: android-actions/setup-android@v3
         with:
           accept-android-sdk-licenses: true
 
-      # 步骤6：修复SDK + 安装组件
-      - name: Fix SDK and Install Components
+      - name: "2️⃣ 固化SDK组件版本"
         run: |
+          echo "===== 删除旧版tools（解决JAXB兼容问题）====="
           rm -rf $ANDROID_SDK_ROOT/tools
+          
+          echo "===== 接受所有许可 ====="
           yes | sdkmanager --licenses || true
-          sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2" "ndk;$ANDROID_NDK_VERSION"
+          
+          echo "===== 安装固定版本组件 ====="
+          sdkmanager "platform-tools"
+          sdkmanager "platforms;android-${{ env.ANDROID_API }}"
+          sdkmanager "build-tools;${{ env.BUILD_TOOLS }}"
+          sdkmanager "ndk;${{ env.NDK_VERSION }}"
+          
+          echo "===== 写入许可文件 ====="
           mkdir -p $ANDROID_SDK_ROOT/licenses
           echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55\nd56f5187479451eabf01fb78af6dfcb131a6481e" > $ANDROID_SDK_ROOT/licenses/android-sdk-license
 
-      # 步骤7：安装系统依赖（含SSL修复）
-      - name: Install System Dependencies
+      - name: "2️⃣ 安装系统依赖"
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential git zip unzip python3-pip python3-dev libssl-dev \
+          sudo apt-get install -y build-essential git zip unzip python3-dev libssl-dev \
             libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev \
             libswscale-dev libavformat-dev libavcodec-dev zlib1g-dev libffi-dev \
             libgstreamer1.0-dev gstreamer1.0-plugins-base libgstreamer-plugins-base1.0-dev \
             autoconf automake libtool cmake ccache lld wget
 
-      # 步骤8：安装Python依赖
-      - name: Install Python Dependencies
+      - name: "2️⃣ 安装Python依赖（固定版本）"
         run: |
           pip install --upgrade pip wheel setuptools
           pip install buildozer==1.5.0 cython==0.29.33 kivy==2.2.1
 
-      # 步骤9：下载Vosk模型
-      - name: Download Vosk Model
+      - name: "2️⃣ 下载Vosk模型"
         run: |
-          wget -q https://alphacephei.com/vosk/models/vosk-model-small-en-us-0.15.zip
+          wget -q --timeout=120 https://alphacephei.com/vosk/models/vosk-model-small-en-us-0.15.zip
           unzip -q vosk-model-small-en-us-0.15.zip
 
-      # 步骤10：配置Buildozer SDK（修复符号链接冲突）
-      - name: Setup Buildozer SDK
+      # ===========================================
+      # 步骤3：预验证（确保环境正确再构建）
+      # ===========================================
+      - name: "3️⃣ 预验证环境"
+        run: |
+          echo "===== 预验证开始 ====="
+          FAIL=0
+          
+          echo -n "检查Python版本... "
+          python --version | grep -q "3.10" && echo "✅ Python 3.10" || { echo "❌ Python版本不对"; FAIL=1; }
+          
+          echo -n "检查JDK版本... "
+          java -version 2>&1 | grep -q "11" && echo "✅ JDK 11" || { echo "❌ JDK版本不对"; FAIL=1; }
+          
+          echo -n "检查SSL模块... "
+          python -c "import ssl; print('✅ SSL模块可用')" || { echo "❌ SSL模块不可用"; FAIL=1; }
+          
+          echo -n "检查build-tools... "
+          ls $ANDROID_SDK_ROOT/build-tools/${{ env.BUILD_TOOLS }}/aapt >/dev/null 2>&1 && echo "✅ build-tools ${{ env.BUILD_TOOLS }}" || { echo "❌ build-tools缺失"; FAIL=1; }
+          
+          echo -n "检查NDK... "
+          ls $ANDROID_SDK_ROOT/ndk/${{ env.NDK_VERSION }} >/dev/null 2>&1 && echo "✅ NDK ${{ env.NDK_VERSION }}" || { echo "❌ NDK缺失"; FAIL=1; }
+          
+          echo -n "检查Vosk模型... "
+          ls vosk-model-small-en-us-0.15 >/dev/null 2>&1 && echo "✅ Vosk模型存在" || { echo "❌ Vosk模型缺失"; FAIL=1; }
+          
+          echo ""
+          if [ $FAIL -eq 0 ]; then
+            echo "===== ✅ 预验证全部通过 ====="
+          else
+            echo "===== ❌ 预验证失败，请检查上述错误 ====="
+            exit 1
+          fi
+
+      # ===========================================
+      # 步骤4：构建APK
+      # ===========================================
+      - name: "4️⃣ 配置Buildozer SDK"
         run: |
           rm -rf ~/.buildozer .buildozer
           mkdir -p ~/.buildozer/android/platform
           ln -sf $ANDROID_SDK_ROOT ~/.buildozer/android/platform/android-sdk
 
-      # 步骤11：构建APK（强制生成日志）
-      - name: Build APK
+      - name: "4️⃣ 构建APK"
         id: build
         run: |
-          export PATH="$ANDROID_SDK_ROOT/build-tools/33.0.2:$ANDROID_SDK_ROOT/platform-tools:$PATH"
+          export PATH="$ANDROID_SDK_ROOT/build-tools/${{ env.BUILD_TOOLS }}:$ANDROID_SDK_ROOT/platform-tools:$PATH"
           buildozer android debug --verbose 2>&1 | tee buildozer-final.log || true
+          
           if ls bin/*.apk 1>/dev/null 2>&1; then
             echo "apk_exists=true" >> $GITHUB_OUTPUT
+            echo "===== ✅ APK生成成功 ====="
+            ls -lh bin/*.apk
           else
             echo "apk_exists=false" >> $GITHUB_OUTPUT
+            echo "===== ❌ APK未生成 ====="
           fi
         env:
           BUILDOZER_WARN_ON_ROOT: 0
 
-      # 步骤12：上传日志和APK
-      - name: Upload Log
+      # ===========================================
+      # 步骤5：上传日志和APK
+      # ===========================================
+      - name: "5️⃣ 上传构建日志"
         if: always()
         uses: actions/upload-artifact@v4
         with:
@@ -110,18 +181,22 @@ jobs:
           path: buildozer-final.log
           if-no-files-found: warn
 
-      - name: Upload APK
+      - name: "5️⃣ 上传APK"
         if: steps.build.outputs.apk_exists == 'true'
         uses: actions/upload-artifact@v4
         with:
           name: teleprompter-apk
           path: bin/*.apk
 
-      - name: Result
+      - name: "5️⃣ 构建结果"
         if: always()
         run: |
           if [ "${{ steps.build.outputs.apk_exists }}" == "true" ]; then
-            echo "✅ APK生成成功"; ls -lh bin/*.apk
+            echo "🎉 构建成功！APK已上传到Artifacts"
           else
-            echo "❌ 构建失败，请下载build-log查看"; exit 1
+            echo "❌ 构建失败，请下载build-log查看详细错误"
+            echo ""
+            echo "===== 错误摘要（最后30行）====="
+            tail -30 buildozer-final.log 2>/dev/null || echo "日志不存在"
+            exit 1
           fi
